--- a/src/app/modules/banking/components/credit-cards/credit-cards.component.html
+++ b/src/app/modules/banking/components/credit-cards/credit-cards.component.html
@@ -8,7 +8,7 @@
     <div class="card-wrapper">
         <div class="card">
             <div class="card-content">
-                <h4 class="header">INSTANT CREDIT CARD</h4>
+                <h4 class="card-header">INSTANT CREDIT CARD</h4>
                 <ul>
                     <li>Instant Credit Card</li>
                 </ul>
@@ -18,7 +18,7 @@
 
         <div class="card">
             <div class="card-content">
-                <h4 class="header">SPECIAL CREDIT CARD</h4>
+                <h4 class="card-header">SPECIAL CREDIT CARD</h4>
                 <ul>
                     <li>Coral Credit Card</li>
                     <li>Rubyx Credit Card</li>
@@ -30,7 +30,7 @@
 
         <div class="card">
             <div class="card-content">
-                <h4 class="header">CO-BRAND CREDIT CARD</h4>
+                <h4 class="card-header">CO-BRAND CREDIT CARD</h4>
                 <ul>
                     <li>MakeMyTrip Credit Card</li>
                     <li>HPCL Credit Card</li>
