--- a/src/app/modules/banking/components/debit-cards/debit-cards.component.html
+++ b/src/app/modules/banking/components/debit-cards/debit-cards.component.html
@@ -30,7 +30,7 @@
   <div class="card-wrapper">
     <div class="card">
       <div class="card-content">
-        <h4 class="header">FEATURED DEBIT CARDS</h4>
+        <h4 class="card-header">FEATURED DEBIT CARDS</h4>
         <ul>
           <li>Gemstone Debit Cards</li>
           <li>Personal Debit Cards</li>
