--- a/src/app/modules/banking/components/pay-anyone/pay-anyone.component.html
+++ b/src/app/modules/banking/components/pay-anyone/pay-anyone.component.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="details">
-            <span>Balance</span> <span>INR 34,3671.64</span>
+            <span>Balance</span> <strong>INR 34,3671.64</strong>
         </div>
     </section>
 
