--- a/src/app/modules/banking/components/personal-details/personal-details.component.html
+++ b/src/app/modules/banking/components/personal-details/personal-details.component.html
@@ -1,90 +1,94 @@
 <div class="bt_container">
-  <h1>Personal Details</h1>
+    <h1>Personal Details</h1>
 </div>
 
 <div class="bt_details_container">
-  <section class="bt_panel left-panel">
-    <img
-      src="https://randomuser.me/api/portraits/men/43.jpg"
-      alt="Profile pic"
-    />
-    <div class="details">
-      <span>Name</span>
-      <span>John Doe</span>
-    </div>
-    <div class="details">
-      <span>Email</span>
-      <span>John.Doe@mail.com</span>
-    </div>
-    <div class="details">
-      <span>Mobile</span>
-      <span>+91 956562XXXX</span>
-    </div>
-  </section>
+    <section class="bt_panel left-panel">
+        <div class="bt_side_panel bt_section_info">
+            <img
+                    alt="Profile pic"
+                    src="https://randomuser.me/api/portraits/men/43.jpg"
+            />
 
-  <section class="bt_panel">
-    <div class="bt_section_info">
-      <h3>Personal Details</h3>
-      <div class="details">
-        <span>First Name</span>
-        <span>John</span>
-      </div>
+            <h3>Details</h3>
+            <div class="grid-vr">
+                <strong>Name</strong> <span>John Doe</span>
+            </div>
+            <div class="grid-vr">
+                <strong>Email</strong> <span>John.Doe@mail.com</span>
+            </div>
+            <div class="grid-vr">
+                <strong>Mobile</strong> <span>+91 956562XXXX</span>
+            </div>
+        </div>
 
-      <div class="details">
-        <span>Last Name</span>
-        <span>Doe</span>
-      </div>
+        <div class="bt_side_panel bt_section_info">
+            <h3>Settings</h3>
+            <div class="details">
+                <span>Notification</span> <label class="switch">
+                <input class="switch-input" type="checkbox" checked>
+                <span class="slider"></span> </label>
+            </div>
+            <div class="details">
+                <span>SMS Alerts</span> <label class="switch">
+                <input class="switch-input" type="checkbox" checked>
+                <span class="slider"></span> </label>
+            </div>
+        </div>
+    </section>
 
-      <div class="details">
-        <span>Preferred Name</span>
-        <span>John</span>
-      </div>
-    </div>
+    <section class="bt_panel">
+        <div class="bt_section_info">
+            <h3>Personal Details</h3>
+            <div class="details">
+                <span>First Name</span> <span>John</span>
+            </div>
 
-    <div class="bt_section_info">
-      <h3>Contact Details</h3>
-      <div class="details">
-        <span>Mobile Number</span>
-        <span>+91 956562XXXX</span>
-      </div>
+            <div class="details">
+                <span>Last Name</span> <span>Doe</span>
+            </div>
 
-      <div class="details">
-        <span>Home Number</span>
-        <span>-</span>
-      </div>
+            <div class="details">
+                <span>Preferred Name</span> <span>John</span>
+            </div>
+        </div>
 
-      <div class="details">
-        <span>Office Number</span>
-        <span>-</span>
-      </div>
+        <div class="bt_section_info">
+            <h3>Contact Details</h3>
+            <div class="details">
+                <span>Mobile Number</span> <span>+91 956562XXXX</span>
+            </div>
 
-      <div class="details">
-        <span>Email Address</span>
-        <span>John.Doe@mail.com</span>
-      </div>
-    </div>
+            <div class="details">
+                <span>Home Number</span> <span>-</span>
+            </div>
 
-    <div class="bt_section_info">
-      <h3>Address</h3>
-      <div class="details">
-        <span>House Number</span>
-        <span>1-11</span>
-      </div>
+            <div class="details">
+                <span>Office Number</span> <span>-</span>
+            </div>
 
-      <div class="details">
-        <span>City</span>
-        <span>Bangalore</span>
-      </div>
+            <div class="details">
+                <span>Email Address</span> <span>John.Doe@mail.com</span>
+            </div>
+        </div>
 
-      <div class="details">
-        <span>State</span>
-        <span>Karnataka</span>
-      </div>
+        <div class="bt_section_info">
+            <h3>Address</h3>
+            <div class="details">
+                <span>House Number</span> <span>1-11</span>
+            </div>
 
-      <div class="details">
-        <span>Post Code</span>
-        <span>530068</span>
-      </div>
-    </div>
-  </section>
+            <div class="details">
+                <span>City</span> <span>Bangalore</span>
+            </div>
+
+            <div class="details">
+                <span>State</span> <span>Karnataka</span>
+            </div>
+
+            <div class="details">
+                <span>Post Code</span> <span>530068</span>
+            </div>
+        </div>
+    </section>
 </div>
