--- a/src/app/modules/banking/components/debit-cards/debit-cards.component.css
+++ b/src/app/modules/banking/components/debit-cards/debit-cards.component.css
@@ -1,3 +1,58 @@
+.bt_card_holder {
+  width: 40%;
+  border-radius: 10px;
+  background: linear-gradient(45deg, black, #7D7D7D);
+  color: white;
+  padding: 0.5em 1em;
+  height: 250px;
+}
 
+.title {
+  margin-bottom: 18px;
+  font-size: 1.25rem;
+}
+
+.chip {
+  height: 50px;
+}
+
+.card-logo {
+  height: 50px;
+}
+
+.emboss.number {
+  font-size: 2rem;
+  letter-spacing: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.expiry {
+  display: flex;
+  padding-top: 24px;
+  align-items: center;
+  justify-content: center;
+}
+.expiry span {
+  padding: 0 12px;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.emboss.name {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+}
+
+@media (min-width: 1900px) {
+  .bt_card_holder {
+    width: 32%;
+  }
+}
 
 /*# sourceMappingURL=debit-cards.component.css.map */
