--- a/src/app/modules/banking/components/debit-cards/debit-cards.component.scss
+++ b/src/app/modules/banking/components/debit-cards/debit-cards.component.scss
@@ -1,51 +1,57 @@
 .bt_card_holder {
-  width: 40%;
-  border-radius: 10px;
-  background: linear-gradient(45deg, black, #7d7d7d);
-  color: white;
-  padding: 0.5em 1em;
-  height: 250px;
+  width         : 40%;
+  border-radius : 10px;
+  background    : linear-gradient(45deg, black, #7D7D7D);
+  color         : white;
+  padding       : 0.5em 1em;
+  height        : 250px;
 }
 
 .title {
-  margin-bottom: 18px;
-  font-size: 1.25rem;
+  margin-bottom : 18px;
+  font-size     : 1.25rem;
 }
 
 .chip {
-  height: 50px;
+  height : 50px;
 }
 
 .card-logo {
-  height: 50px;
+  height : 50px;
 }
 
 .emboss.number {
-  font-size: 2rem;
-  letter-spacing: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size       : 2rem;
+  letter-spacing  : 2px;
+  display         : flex;
+  justify-content : center;
+  align-items     : center;
 }
 
 .expiry {
-  display: flex;
-  padding-top: 24px;
-  align-items: center;
-  justify-content: center;
+  display         : flex;
+  padding-top     : 24px;
+  align-items     : center;
+  justify-content : center;
 
   span {
-    padding: 0 12px;
+    padding : 0 12px;
   }
 }
 
 .card-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display         : flex;
+  justify-content : space-between;
+  align-items     : center;
 }
 
 .emboss.name {
-  font-size: 1.25rem;
-  text-transform: uppercase;
+  font-size      : 1.25rem;
+  text-transform : uppercase;
 }
+
+@media (min-width : 1900px) {
+    .bt_card_holder {
+      width : 32%;
+    }
+  }
