--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -1,8 +1,26 @@
 @import "radio";
 
+$primary-color      : #BE5A38;
+$border-color       : #E0E0E0;
+$input-border-color : #D3D3D3;
+$link-active        : #F6E5E0;
+$font-color         : #616161;
+$background-clr     : linear-gradient(45deg, $primary-color, #D99781);
+$font-family        : "Roboto", sans-serif;
+
 /*Banking template color variables*/
 .bt {
+
   /*Common*/
+  &.banking {
+    display : flex;
+    color   : $font-color;
+  }
+
+  .banking-content-container {
+    flex-grow : 1;
+  }
+
   &_container {
     margin-bottom : 32px;
   }
@@ -20,7 +38,118 @@
     margin-bottom : 24px;
   }
 
-  /*switch*/
+  /********* BANKING CONTENT START********/
+  .banking-content {
+    height     : 100%;
+    background : #EBEBEB;
+    padding    : 24px 48px;
+  }
+
+  .banking-content .header {
+    display         : flex;
+    justify-content : flex-end;
+    align-items     : center;
+    padding         : 12px;
+    margin-bottom   : 32px;
+  }
+
+  .banking-content .search-container {
+    display         : flex;
+    justify-content : flex-end;
+    margin-right    : 24px;
+    box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
+    border-radius   : 20px;
+  }
+
+  .banking-content .search-input {
+    height         : 40px;
+    border-radius  : 20px 0 0 20px;
+    border         : none;
+    padding        : 0 0 0 18px;
+    letter-spacing : 0.7px;
+    outline        : none;
+    font-family    : $font-family;
+  }
+
+  .banking-content .search-input::placeholder {
+    opacity : 0.5;
+  }
+
+  .banking-content .search-button {
+    background    : white;
+    border        : none;
+    padding       : 10px;
+    border-radius : 0 20px 20px 0;
+    cursor        : pointer;
+    transition    : transform 0.1s ease;
+    outline       : none;
+  }
+
+  .banking-content .search-button:active {
+    transform : scale(0.95);
+  }
+
+  .banking-content .search-button svg {
+    width  : 18px;
+    height : 18px;
+  }
+
+  .banking-content .notification {
+    height          : 40px;
+    width           : 40px;
+    border-radius   : 50%;
+    background      : white;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    margin-right    : 24px;
+    box-shadow      : 6px 7px 15px 0 rgba(0, 0, 0, 0.14);
+  }
+
+  .banking-content .profile img {
+    display       : inline-block;
+    width         : 36px;
+    height        : 36px;
+    border-radius : 50%;
+  }
+
+  /********* BANKING CONTENT END ********/
+
+  /********* BANKING DASHBOARD START *******/
+  .dashboard-container {
+    h1 {
+      font-size : 2.5em;
+    }
+  }
+
+  p {
+    padding : 12px 0;
+  }
+
+  .summary {
+    border-radius   : 10px;
+    display         : flex;
+    justify-content : flex-start;
+    align-items     : center;
+    margin-bottom   : 24px;
+
+    div {
+      flex : 1;
+    }
+
+    .summary-content {
+      display     : flex;
+      align-items : center;
+
+      h2 {
+        color : $primary-color;
+      }
+    }
+  }
+
+  /********* BANKING DASHBOARD END *******/
+
+  /********* SWITCH **********/
   &_radio {
     display       : inline-flex;
     background    : white;
@@ -28,6 +157,7 @@
     overflow      : hidden;
     border-radius : 20px;
     margin-bottom : 24px;
+    box-shadow    : 5px 5px 15px rgb(0 0 0 / 15%);
 
     input {
       display : none;
@@ -39,23 +169,162 @@
       cursor    : pointer;
 
       &:not(:last-of-type) {
-        border-right : 1px solid var(--bt-border-color);
+        border-right : 1px solid $border-color;
       }
     }
 
     input:checked + label {
-      background : var(--bt-primary-color);
+      background : $background-clr;
       color      : white;
     }
   }
 
+  /*****NAVIGATION BAR START*****/
+  .side-nav {
+    height : 100vh;
+  }
+
+  .logo {
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    margin          : 48px 32px;
+
+    &__bg {
+      height        : 50px;
+      width         : 50px;
+      border-radius : 50%;
+      background    : $background-clr;
+      margin-right  : 12px;
+      position      : relative;
+
+      span {
+        color       : white;
+        font-weight : 600;
+        position    : absolute;
+        top         : 50%;
+        left        : 50%;
+        transform   : translate(-50%, -50%);
+      }
+    }
+  }
+
+  .menu-bar {
+    ul {
+      padding : 0;
+      margin  : 0;
+    }
+
+    a {
+      display         : inline-flex;
+      align-items     : center;
+      text-decoration : none;
+      padding         : 24px 32px;
+      color           : #343434;
+      width           : 100%;
+
+      &.active {
+        color        : $primary-color;
+        background   : $link-active;
+        border-right : 3px solid;
+      }
+    }
+  }
+
+  /*****NAVIGATION BAR END*****/
+
+  /*****TRANSACTION START******/
+  .transaction-history {
+    h3 {
+      padding       : 24px;
+      border-bottom : 3px solid $border-color;
+    }
+
+    table {
+      border-collapse : collapse;
+      table-layout    : fixed;
+      text-align      : left;
+      min-width       : 100%;
+
+      th, td {
+        padding       : 1em;
+        border-bottom : 1px solid $border-color;
+      }
+
+      th {
+        span {
+          display : flex;
+        }
+      }
+
+      td {
+        & span.credit {
+          color : green;
+        }
+
+        & span.debit {
+          color : red;
+        }
+
+        &.amount {
+          font-weight : 500;
+        }
+
+        & span.transaction-type {
+          display     : flex;
+          align-items : center;
+        }
+
+        button {
+          border         : none;
+          border-radius  : 3px;
+          outline        : none;
+          width          : auto;
+          padding        : 12px;
+          background     : $primary-color;
+          cursor         : pointer;
+          text-transform : uppercase;
+          transition     : transform 0.2s ease;
+          font-weight    : 500;
+          display        : flex;
+          margin         : 0;
+        }
+
+      }
+    }
+  }
+
+  table.transaction-details-table {
+
+    width           : 100%;
+    border-collapse : collapse;
+    table-layout    : fixed;
+    margin          : 0 auto;
+
+
+    tr {
+      border-bottom : 1px solid lightgray;
+    }
+
+    tr:nth-child(2n+1) {
+      background : #FCFCFC;
+    }
+
+    tr > td:first-child {
+      padding : 12px 24px;
+    }
+  }
+
+  /*****TRANSACTION END******/
+
   &_section_info {
     h3 {
       padding       : 12px;
-      background    : #7B85C1;
+      background    : $background-clr;
       color         : white;
       border-radius : 5px;
       margin-bottom : 24px;
+      font-weight   : 100;
     }
 
     h4 {
@@ -70,19 +339,27 @@
     align-items           : center;
   }
 
+  .grid-vr {
+    display               : grid;
+    grid-template-columns : 1fr;
+    grid-gap              : 0.5em;
+    padding               : 12px;
+    align-items           : center;
+  }
+
   select {
     padding       : 0.5em 4em 0.5em 0.5em;
-    border-color  : var(--bt-input-border-color);
+    border-color  : $input-border-color;
     border-radius : 5px;
     font-size     : 14px;
     color         : #616161;
   }
 
   input {
-    border        : 1px solid var(--bt-input-border-color);
+    border        : 1px solid $input-border-color;
     padding       : 6px 12px;
     border-radius : 5px;
-    height        : 25px;
+    height        : 40px;
     font-family   : Roboto, sans-serif;
     font-size     : 16px;
   }
@@ -115,12 +392,12 @@
   }
 
   .btn-primary {
-    background : var(--bt-primary-color);
+    background : $background-clr;
     color      : #FFF;
   }
 
   .btn-secondary {
-    background : var(--bt-input-border-color);
+    background : $input-border-color;
     color      : #616161;
   }
 
@@ -128,7 +405,8 @@
     margin-bottom : 24px;
   }
 
-  /*Card*/
+  /********* CARD START ***********/
+
   .card-wrapper {
     display               : grid;
     grid-template-columns : repeat(3, 1fr);
@@ -136,7 +414,7 @@
   }
 
   .card {
-    background    : linear-gradient(45deg, #606C88, #3F4C6B);
+    background    : $background-clr;
     color         : white;
     padding       : 1em;
     border-radius : 5px;
@@ -144,9 +422,10 @@
   }
 
   .card-content {
-    .header {
+    .card-header {
       padding-bottom : 0.5em;
       border-bottom  : 2px solid white;
+      text-align     : left;
     }
 
     ul {
@@ -163,7 +442,7 @@
     a {
       display         : grid;
       justify-content : end;
-      color           : #F39E7F;
+      color           : white;
       text-decoration : none;
       padding         : 0.2em;
       transition      : text-decoration 0.3s ease-in;
@@ -174,14 +453,21 @@
     }
   }
 
+  /********* CARD END ***********/
+
   .bt_details_container {
     display               : grid;
     grid-template-columns : 30% 70%;
     grid-gap              : 2em;
 
     img {
-      width         : 100%;
-      margin-bottom : 32px;
+      width           : 65%;
+      border-radius   : 50%;
+      display         : flex;
+      justify-content : center;
+      align-items     : center;
+      align-self      : center;
+      margin          : 24px auto;
     }
 
     .left-panel {
@@ -196,33 +482,33 @@
   }
 
   &_inline_error {
-    color   : #f88e94;
+    color   : #F88E94;
     padding : 12px 0;
   }
 
   form {
     .bt_inline_error {
-      grid-column: 2/3;
+      grid-column : 2/3;
     }
   }
 
   &_banner {
-    padding : 12px;
+    padding       : 12px;
     margin-bottom : 12px;
-    color: #fff;
-    border-radius: 5px;
+    color         : #FFF;
+    border-radius : 5px;
 
     a {
-      color: white;
+      color : white;
     }
   }
-  
+
   &_error_banner {
-    background : #f88e94;
+    background : #F88E94;
   }
 
   &_success_banner {
-    background: #5ece5e;
+    background : #5ECE5E;
   }
 
   p {
@@ -230,28 +516,28 @@
   }
 
   .alert {
-    display: flex;
-    align-items: center;
+    display     : flex;
+    align-items : center;
 
     svg {
-      fill: white;
+      fill : white;
     }
   }
 
   .alert_heading {
-    display: flex;
-    margin-bottom: 24px;
-    justify-content: center;
+    display         : flex;
+    margin-bottom   : 24px;
+    justify-content : center;
 
     svg {
-      fill: white;
+      fill : white;
     }
   }
 
   .alert_body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display        : flex;
+    flex-direction : column;
+    align-items    : center;
 
     span {
       margin-bottom : 12px;
@@ -259,8 +545,30 @@
   }
 
   &_optional {
-    opacity: 0.5;
-    font-weight: 400;
-    font-style: italic;
+    opacity     : 0.5;
+    font-weight : 400;
+    font-style  : italic;
   }
+
+  &_side_panel {
+    .details {
+      padding               : 12px;
+      grid-template-columns : 70% 30%;
+    }
+
+    &:not(:last-child) {
+      margin-bottom : 32px;
+    }
+  }
+
+  /******* OVERRIDES START ********/
+  .radio-label .checker {
+    border : 1.5px solid $input-border-color;
+  }
+
+  input.switch-input:checked + .slider {
+    background : #C85E41;
+  }
+
+  /******* OVERRIDES END ********/
 }
