--- a/src/styles/_switch.scss
+++ b/src/styles/_switch.scss
@@ -17,7 +17,7 @@ input.switch-input {
   left          : 0;
   right         : 0;
   bottom        : 0;
-  background    : grey;
+  background    : #A7A7A7;
   border-radius : 20px;
   transition    : all .5s ease;
 }
