--- a/src/app/components/email-template/email-template.component.css
+++ b/src/app/components/email-template/email-template.component.css
@@ -19,8 +19,8 @@
 }
 .email-template .header .actions {
   width: 30%;
-  height: 40px;
-  padding: 4px 24px;
+  height: 48px;
+  padding: 0 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -78,8 +78,8 @@
   letter-spacing: 0;
 }
 .email-template .title-container {
-  height: 40px;
-  padding: 4px 12px;
+  height: 48px;
+  padding: 0 12px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
