--- a/src/app/components/email-template/email-template.component.scss
+++ b/src/app/components/email-template/email-template.component.scss
@@ -21,8 +21,8 @@
 
     .actions {
       width           : 30%;
-      height          : 40px;
-      padding         : 4px 24px;
+      height          : 48px;
+      padding         : 0 12px;
       display         : flex;
       justify-content : space-between;
       align-items     : center;
@@ -93,8 +93,8 @@
   }
 
   .title-container {
-    height          : 40px;
-    padding         : 4px 12px;
+    height          : 48px;
+    padding         : 0 12px;
     display         : flex;
     justify-content : flex-end;
     align-items     : center;
